--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">Mercado-Solto</string>
+    <string name="app_name">Mercado Solto</string>
     <string name="mercado">Mercado Solto</string>
     <string name="hint_email">E-mail</string>
     <string name="hint_senha">Senha</string>
     <string name="hint_confirmar_senha">Confirmar senha</string>
     <string name="entrar_main">ENTRAR</string>
     <string name="cadastrar">CADASTRAR</string>
-    <string name="esqueceu_senha_main">Esqueceu a senha?</string>
+    <string name="esqueceu_senha_main">Esqueceu a senha? Clique aqui!</string>
     <string name="voltar">VOLTAR</string>
     <string name="enviar">ENVIAR</string>
 </resources>
