Atualizando estrutura para padrão MVVMi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="esqueceu_senha_main">Esqueceu a senha? Clique aqui!</string>
     <string name="voltar">VOLTAR</string>
     <string name="enviar">ENVIAR</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
