--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,15 @@
     <string name="esqueceu_senha_main">Esqueceu a senha? Clique aqui!</string>
     <string name="voltar">VOLTAR</string>
     <string name="enviar">ENVIAR</string>
+    <string name="categorias">Categorias</string>
+    <string name="completar_perfil">Complete seu perfil</string>
+    <string name="Chat">Chat</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_categoria">CategoriaActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
