--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,13 @@
     <string name="voltar">VOLTAR</string>
     <string name="enviar">ENVIAR</string>
     <string name="categorias">Categorias</string>
-    <string name="completar_perfil">Complete seu perfil</string>
+    <string name="completar_perfil">Perfil</string>
     <string name="Chat">Chat</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_categoria">CategoriaActivity</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
